--- a/src/app/escolha/escolha.page.html
+++ b/src/app/escolha/escolha.page.html
@@ -28,11 +28,11 @@
         <h2>{{acessorio.nome}}</h2>
         <h4>R$ {{acessorio.preco}}</h4>
       </ion-label>
-      <ion-toggle color="light"></ion-toggle>
+      <ion-toggle #toggle (ionChange)="atualizarTotal(toggle.checked, acessorio)" color="light"></ion-toggle>
     </ion-item>
   </ion-item-group>
   <ion-item-divider color="light">
-    Total: R$ 1000
+    Total: R$ {{precoTotal}}
   </ion-item-divider>
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
     <ion-fab-button (click)="voltar()">
