--- a/src/app/escolha/escolha.page.html
+++ b/src/app/escolha/escolha.page.html
@@ -35,7 +35,7 @@
     Total: R$ {{precoTotal}}
   </ion-item-divider>
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-    <ion-fab-button (click)="voltar()">
+    <ion-fab-button (click)="avancaCadastro()">
       <ion-icon name="arrow-dropright"></ion-icon>
     </ion-fab-button>
   </ion-fab>
